name:                skywalker
version:             0.2.0.0
synopsis:            A Web library combines Client and Server into one
description:         Please see README.md
homepage:            http://github.com/manyoo/skywalker#readme
license:             BSD3
license-file:        LICENSE
author:              Eric Wong
maintainer:          ericsyw@gmail.com
copyright:           BSD3
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

Flag client
  default: False

library
  hs-source-dirs:      src
  exposed-modules:     Skywalker.App,
                       Skywalker.Pool,
                       Skywalker.StaticApp,
                       Skywalker.PostgreSQL,
                       Skywalker.JSON,
                       Skywalker.UUID,
                       Skywalker.PubSub
  build-depends:       base,
                       mtl,
                       transformers,
                       containers,
                       bytestring,
                       data-default,
                       stm
  default-language:    Haskell2010
  if !impl(ghcjs) && !flag(client)
     exposed-modules:  Skywalker.RestServer
     build-depends:    aeson,
                       resource-pool,
                       warp,
                       wai,
                       wai-app-static,
                       wai-extra,
                       http-types,
                       binary,
                       postgresql-simple,
                       text,
                       uuid
  if impl(ghcjs)
     js-sources:       javascript/uuid.js
     exposed-modules:  Skywalker.EventSource
     build-depends:    ghcjs-base,
                       uuid-types
  if flag(client)
    build-depends:     aeson,
                       uuid,
                       text,
                       http-conduit
    cpp-options:       -Dclient

test-suite skywalker-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , skywalker
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/manyoo/skywalker
